[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Worlds/World4/World4.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pads/Pad_03_2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Worlds/World.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Worlds/WorldCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/Bonus_Items/Jump_Bonus_03.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 130, 180 )

[node name="World4Root" type="Node2D"]
position = Vector2( 14.3538, 51.2637 )
script = ExtResource( 1 )

[node name="World4Area" type="Area2D" parent="."]

[node name="World" type="Sprite" parent="World4Area"]
position = Vector2( 401.332, 809.961 )
scale = Vector2( 0.302481, 0.486078 )
z_index = -1
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="WorldCamera" type="Camera2D" parent="World4Area/World"]
position = Vector2( -381, -650.474 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="World4Area/World/WorldCamera"]

[node name="Sprite" type="Sprite" parent="World4Area/World"]
position = Vector2( -20, -232.005 )
scale = Vector2( 1.6774, 1.29584 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World4Area"]
position = Vector2( 398.878, 749.964 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="input_event" from="World4Area" to="." method="_on_World4Area_input_event"]
